[package]
name = "flow"
version = "0.0.0"
edition = "2024"

[dependencies]
flow-lib = { workspace = true }
value = { workspace = true }
utils = { workspace = true }
rhai-script.workspace = true
command-rpc.workspace = true
tower-rpc.workspace = true

anyhow = "1.0"
bs58 = "0.4"
chrono = "0.4"
bytes = "1.2.1"
futures = "0.3.21"
petgraph = "0.8.2"
inventory = "0.3"
thiserror = "1.0.31"
async-trait = "0.1.56"
solana-system-interface = { workspace = true }
tokio = "1"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
hashbrown = { version = "0.14", features = ["serde"] }
tower = { version = "0.5", features = ["util"] }
tokio-util = "0.7"
tracing = "0.1"
actix = "0.13"
derive_more = "0.99"
indexmap = "2"
rust_decimal = { version = "1", features = ["serde-with-float"] }
reqwest = { version = "0.12", features = ["json"] }
mime_guess = "2.0.4"
crossbeam-channel = "0.5.8"
tempfile = "3.10.1"
url = "2.5.0"
home = "0.5.9"
bincode = "1.3.3"
base64 = "0.22.1"
bon = "3.6.3"
getset = "0.1.3"
serde_with = "3.12.0"
flow-lib-solana.workspace = true
postgres-types = { version = "0.2.11", features = ["derive"] }
chacha20poly1305 = "0.10.1"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
borsh = { version = "1.6.0", features = ["derive"] }

[dev-dependencies]
cmds-std.workspace = true
cmds-solana.workspace = true
actix-web = "4.5.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.7", features = ["async", "async_tokio"] }

[[bench]]
name = "build_flow"
harness = false
