[package]
name = "pdg-common"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_repr = "0.1.12"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.40"
uuid = { version = "1.3.1", features = ["serde"] }
rand = "0.8.4"
