[package]
name = "rhai-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bs58.workspace = true
flow-lib.workspace = true
rhai = { version = "1.17", features = ["decimal", "indexmap"] }
rhai-rand = { version = "0.1.6", features = ["decimal"] }
thiserror = "1.0.50"
tracing = "0.1.40"
