[package]
name = "srpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
futures-channel = "0.3.30"
hashbrown = "0.14"
serde.workspace = true
serde_json.workspace = true
smartstring = { version = "1.0.1", features = ["serde"] }
thiserror = "1.0.58"
tower = "0.4.13"
