[package]
name = "srpc"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
futures-channel = "0.3.30"
hashbrown = "0.14"
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0.58"
tower = { version = "0.4.13", features = ["filter", "util"] }
url = { version = "2.5.0", features = ["serde"] }
