[package]
name = "srpc"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-web-actors = "4.3.0"
futures-channel = "0.3.30"
futures-util = "0.3.30"
hashbrown = "0.14"
serde.workspace = true
serde_json.workspace = true
smallvec = { version = "1.13.2", features = ["const_generics"] }
thiserror = "1.0.58"
tower = { version = "0.4.13", features = ["filter", "util"] }
tracing = "0.1.40"
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async", "async_tokio"] }
tokio = "1"
reqwest = { version = "0.12", default-features = false }

[[bench]]
name = "srpc_http"
harness = false
