[package]
name = "umbra-prover"
version = "0.1.0"
edition = "2021"
description = "Rust-native Groth16 prover for Umbra Privacy circuits. Takes a witness + zkey and produces a Groth16 proof."

[[bin]]
name = "umbra-prover"
path = "src/main.rs"

[dependencies]
# Groth16 proving + zkey reading (no wasmer — uses circom-prover's internal ark_circom fork)
circom-prover = { version = "0.1", default-features = false, features = ["arkworks"] }

# Arkworks BN254 types for proof format serialization
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-groth16 = "0.5"
ark-std = "0.5"

# IO
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
anyhow = "1"
num-bigint = { version = "0.4", features = ["serde"] }
