[package]
name = "utils"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = { version = "0.4", features = ["buffer", "util"] }
actix = "0.13"
hashbrown = "0.13"
futures-util = { version = "0.3", features = ["sink"] }
serde = "1"
bs58 = "0.4"
thiserror = "1"
serde_json = { version = "1", features = ["raw_value"] }
