[package]
name = "flow-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
value.workspace = true
spo-helius.workspace = true

anyhow = "1.0"
inventory = "0.3"
async-trait = "0.1"
bytes = { version = "1.8.0", features = ["serde"] }
thiserror = "1.0.31"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_with = { version = "3", features = ["base64"] }
tower = { version = "0.5", features = ["buffer", "util", "retry"] }
tracing = "0.1"
pin-project-lite = "0.2"
actix = "0.13"
tokio = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
borsh1 = { package = "borsh", version = "1" }
rmp-serde = "1.1.2"
base64 = "0.21"
bs58 = "0.5.1"
nom = "7.1.3"
ed25519-dalek = "2.1.1"
five8 = { version = "0.2.1", features = ["std"] }
bon = "3.0.2"
schemars = { version = "1.0.4", features = ["indexmap2", "preserve_order", "rust_decimal1", "url2", "uuid1"] }
bincode1 = { package = "bincode", version = "1" }
bincode = { version = "2.0.1", features = ["serde"] }
semver = { version = "1.0.26", features = ["serde"] }
regex = "1.11.1"
derive_more = { version = "2.0.1", features = ["from"] }

# solana libs
solana-rpc-client = "2"
solana-rpc-client-api = "2"
solana-transaction-status = "2"
solana-pubkey = "2"
solana-signer = "2"
solana-signature = "2"
solana-keypair = "2"
solana-program = "2"
solana-commitment-config = "2"
solana-compute-budget-interface = { version = "2", features = ["borsh"] }
solana-transaction = "2"
solana-presigner = "2"
solana-address-lookup-table-interface = "2"
solana-clock = "2"
agave-feature-set = "2"
agave-precompiles = "2"
