[package]
name = "flow-lib"
version = "0.2.0"
edition = "2024"
description = "Library for implementing Space Operator nodes."
license = "AGPL-3.0-only"
repository = "https://github.com/space-operator/flow-backend"
homepage = "https://spaceoperator.com/"

[dependencies]
value.workspace = true

anyhow = "1.0"
inventory = "0.3"
async-trait = "0.1"
bytes = { version = "1.8.0", features = ["serde"] }
thiserror = "2"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["raw_value", "preserve_order"] }
serde_with = { version = "3", features = ["base64"] }
tower = { version = "0.5", features = ["buffer", "util", "retry"] }
tracing = "0.1"
pin-project-lite = "0.2"
actix = "0.13"
tokio = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
rmp-serde = "1.1.2"
five8 = "1"
bon = "3.0.2"
schemars = { version = "1.1.0", features = ["indexmap2", "preserve_order", "rust_decimal1", "url2", "uuid1"] }
bincode = { version = "2.0.1", features = ["serde"] }
regex = "1.11.1"
derive_more = { version = "2.0.1", features = ["from"] }

# solana libs
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
solana-signature = { workspace = true }
solana-keypair = { workspace = true }
solana-program = { workspace = true }
solana-commitment-config = { workspace = true }
solana-presigner = { workspace = true }
solana-sanitize = { workspace = true }
solana-message = { workspace = true }
solana-transaction-error = { workspace = true }
solana-instruction-error = { workspace = true }
spo-helius.workspace = true

[dev-dependencies]
solana-system-interface = { workspace = true }
