[package]
name = "flow-tracing"
version = "0.1.0"
edition = "2024"
description = "Tracing for Space Operator flow"
license = "AGPL-3.0-only"
repository = "https://github.com/space-operator/flow-backend"

[dependencies]
flow-lib.workspace = true

ahash = "0.8.12"
chrono = "0.4.41"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
