[package]
name = "flow-value"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["solana", "json"]
solana = ["dep:solana-sdk"]
json = ["dep:serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"] }
rust_decimal = { version = "1", default-features = false }
bs58 = "0.4"
base64 = "0.13"
indexmap = { version = "2", features = ["serde"] }
thiserror = "1"
bytes = { version = "1", features = ["serde"] }
itoa = "1"
ryu = "1"

serde_json = { version = "1", optional = true }
solana-sdk = { version = "1", optional = true }
serde_with = "3.11.0"
five8 = { version = "0.2.1", features = ["std"] }

[dev-dependencies]
rust_decimal_macros = "1.26"
serde_json = { version = "1", features = ["preserve_order"] }
