[package]
name = "flow-value"
version = "0.1.0"
edition = "2024"

[features]
default = ["solana", "json", "bincode"]
solana = ["solana-pubkey", "solana-keypair", "solana-signature"]
solana-pubkey = ["dep:solana-pubkey"]
solana-keypair = ["dep:solana-keypair"]
solana-signature = ["dep:solana-signature"]
json = ["dep:serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"] }
rust_decimal = { version = "1", default-features = false }
bs58 = "0.4"
base64 = "0.13"
indexmap = { version = "2", features = ["serde"] }
thiserror = "1"
bytes = { version = "1", features = ["serde"] }
itoa = "1"
ryu = "1"

serde_json = { version = "1", optional = true }
solana-pubkey = { version = "2", optional = true }
solana-keypair = { version = "2", optional = true }
solana-signature = { version = "2", optional = true }
serde_with = "3.11.0"
five8 = { version = "0.2.1", features = ["std"] }
schemars = { version = "1.0.0-alpha.17", default-features = false }
bincode = { version = "2", optional = true }

[dev-dependencies]
rust_decimal_macros = "1.26"
serde_json = { version = "1", features = ["preserve_order"] }
solana-pubkey = { version = "2", features = ["rand"] }
solana-keypair = "2"
solana-signature = "2"
solana-signer = "2"
solana-instruction = { version = "2", features = ["serde"] }
