[package]
name = "flow-value"
version = "0.3.0"
edition = "2024"
description = "Value type for flow inputs and outputs."
license = "AGPL-3.0-only"
repository = "https://github.com/space-operator/flow-backend"
homepage = "https://spaceoperator.com/"

[features]
default = ["solana", "json", "bincode"]
solana = ["solana-pubkey", "solana-keypair", "solana-signature"]
solana-pubkey = ["dep:solana-pubkey"]
solana-keypair = ["dep:solana-keypair"]
solana-signature = ["dep:solana-signature"]
json = ["dep:serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"] }
rust_decimal = { version = "1", default-features = false }
base64 = "0.22.1"
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
bytes = { version = "1", features = ["serde"] }
itoa = "1"
ryu = "1"
serde_with = "3.11.0"
five8 = "1.0.0"
schemars = { version = "1.0.4", default-features = false }

serde_json = { version = "1", optional = true }
bincode = { version = "2", optional = true }
solana-pubkey = { workspace = true, optional = true }
solana-keypair = { workspace = true, optional = true }
solana-signature = { workspace = true, optional = true }

[dev-dependencies]
rust_decimal_macros = "1"
serde_json = { version = "1", features = ["preserve_order"] }
solana-pubkey = { workspace = true, features = ["rand"] }
solana-keypair = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-instruction = { workspace = true }
