[package]
name = "schema"
version = "0.1.0"
edition = "2024"

[dependencies]
semver = { version = "1.0.26", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
value.workspace = true

[dev-dependencies]
serde_json.workspace = true
