[package]
name = "schema"
version = "0.1.0"
edition = "2024"

[dependencies]
value.workspace = true

semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
