[package]
name = "space-lib"
version = "0.5.1"
edition = "2024"
license = "Apache-2.0"
authors = ["Knarkzel <knarkzel@gmail.com>"]
documentation = "https://docs.rs/space-lib"
description = "WebAssembly host functions for Space Operator"

[features]
json = ["serde_json"]

[dependencies]
rmp-serde = "1.1"
space-macro = { workspace = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
