[package]
name = "space-macro"
version = "0.2.1"
edition = "2024"
license = "Apache-2.0"
authors = ["Knarkzel <knarkzel@gmail.com>"]
documentation = "https://docs.rs/space-lib"
description = "Macro for space-lib"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
