[package]
name = "spo-helius"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.6.1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "*"
bs58 = "0.4"
