[package]
name = "spo-srpc"
version = "0.1.0"
edition = "2024"
description = "RPC for tower service"
license = "AGPL-3.0-only"
repository = "https://github.com/space-operator/flow-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = { version = "4.9.0", default-features = false }
futures-channel = "0.3.30"
futures-util = "0.3.30"
hashbrown = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
smallvec = { version = "1.13.2", features = ["const_generics"] }
thiserror = "1.0.58"
tower = { version = "0.5", features = ["filter", "util"] }
tracing = "0.1.40"
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
criterion = "0.5.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }
tungstenite = "0.24.0"
tokio = { version = "1", features = ["sync"] }

[[bench]]
name = "srpc_bench"
harness = false
